--- a/flightv1/flightv1.ioc
+++ b/flightv1/flightv1.ioc
@@ -2,8 +2,12 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+CORTEX_M7.CPU_DCache=Enabled
+CORTEX_M7.CPU_ICache=Enabled
+CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache
 CortexM4.IPs=CORTEX_M4\:I,DEBUG,FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,OPENAMP_M4\:I,PDM2PCM_M4\:I,PWR,RCC,RESMGR_UTILITY,SYS_M4\:I,USB_DEVICE_M4\:I,USB_HOST_M4\:I,VREFBUF,WWDG2\:I,GPIO,DMA,BDMA,MDMA,NVIC2\:I,SPI1\:I
 CortexM7.IPs=CORTEX_M7\:I,DEBUG\:I,FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,OPENAMP_M7\:I,PDM2PCM_M7\:I,PWR\:I,RCC\:I,RESMGR_UTILITY\:I,SYS\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,VREFBUF\:I,WWDG1\:I,GPIO\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,SPI2\:I,SPI3\:I,SPI4\:I,MEMORYMAP\:I
+CortexM7.Pins=PB14
 File.Version=6
 GPIO.groupedBy=Show All
 KeepUserPlacement=false
@@ -36,13 +40,14 @@ Mcu.Pin11=PA7
 Mcu.Pin12=PB2
 Mcu.Pin13=PB10
 Mcu.Pin14=PB11
-Mcu.Pin15=PC10
-Mcu.Pin16=PC11
-Mcu.Pin17=PC12
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_SYS_M4_VS_Systick
+Mcu.Pin15=PB14
+Mcu.Pin16=PC10
+Mcu.Pin17=PC11
+Mcu.Pin18=PC12
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PE5
-Mcu.Pin20=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin20=VP_SYS_M4_VS_Systick
+Mcu.Pin21=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin3=PE6
 Mcu.Pin4=PH0-OSC_IN (PH0)
 Mcu.Pin5=PH1-OSC_OUT (PH1)
@@ -50,7 +55,7 @@ Mcu.Pin6=PC1
 Mcu.Pin7=PC2_C
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=21
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H755ZITx
@@ -104,6 +109,11 @@ PB11.GPIO_Label=SPI2_CS
 PB11.Locked=true
 PB11.PinAttribute=Free
 PB11.Signal=GPIO_Output
+PB14.ContextOwner=CortexM7
+PB14.GPIOParameters=PinAttribute
+PB14.Locked=true
+PB14.PinAttribute=CortexM7
+PB14.Signal=GPIO_Output
 PB2.GPIOParameters=PinAttribute
 PB2.Mode=Full_Duplex_Master
 PB2.PinAttribute=CortexM7
@@ -225,7 +235,7 @@ RCC.HCLKFreq_Value=64000000
 RCC.HRTIMFreq_Value=64000000
 RCC.I2C123Freq_Value=64000000
 RCC.I2C4Freq_Value=64000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CPU2Freq_Value,CPU2SystikFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D2PPRE2,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLFRACN,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CPU2Freq_Value,CPU2SystikFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D2PPRE2,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLFRACN,PWR_Regulator_Voltage_Scale,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=64000000
 RCC.LPTIM2Freq_Value=64000000
 RCC.LPTIM345Freq_Value=64000000
@@ -234,6 +244,7 @@ RCC.LTDCFreq_Value=129000000
 RCC.MCO1PinFreq_Value=64000000
 RCC.MCO2PinFreq_Value=64000000
 RCC.PLLFRACN=3072
+RCC.PWR_Regulator_Voltage_Scale=PWR_REGULATOR_VOLTAGE_SCALE1
 RCC.QSPIFreq_Value=64000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
